removed dbaas from server names

--- a/postgresql_with_volume_type.yaml
+++ b/postgresql_with_volume_type.yaml
@@ -100,7 +100,7 @@ resources:
     properties:
       value:
         str_replace:
-          template: dbaas-$prefix-$random
+          template: $prefix-$random
           params:
             $prefix: { get_param: stack_name }
             $random: { get_resource: random_string1 }
@@ -110,7 +110,7 @@ resources:
     properties:
       value:
         str_replace:
-          template: dbaas-$prefix-$random
+          template: $prefix-$random
           params:
             $prefix: { get_param: stack_name }
             $random: { get_resource: random_string2 }
@@ -120,7 +120,7 @@ resources:
     properties:
       value:
         str_replace:
-          template: dbaas-$prefix-$random
+          template: $prefix-$random
           params:
             $prefix: { get_param: stack_name }
             $random: { get_resource: random_string3 }
