Updated cockroachdb with custom/default SG

--- a/cockroachdbv2.yaml
+++ b/cockroachdbv2.yaml
@@ -76,6 +76,19 @@ parameters:
     description: AZ to be used for node3
     default: JMNG-PE3-PROD3
 
+  sg_type:
+    type: string
+    default: default
+
+  securityGroup:
+    type: string
+    description: security group name
+
+
+conditions:
+  custom: {equals: [{get_param: sg_type}, "custom"]}
+  default: {equals: [{get_param: sg_type}, "default"]}
+
 resources:
   random_string1:
       type: OS::Heat::RandomString
@@ -142,22 +155,11 @@ resources:
             $prefix: { get_param: stack_name }
             $random: { get_resource: random_string4 }
             
-  random_string_sg:
-      type: OS::Heat::RandomString
-      properties:
-          length: 4
-          sequence: lowercase
-
   security_group:
       type: OS::Neutron::SecurityGroup
       depends_on: random_string1
       properties:
-          name:
-              str_replace:
-                  template: $prefix-$random
-                  params:
-                      $prefix: { get_param: stack_name }
-                      $random: { get_resource: random_string_sg }
+          name: { get_param: securityGroup }}
           rules:
               - remote_mode: remote_group_id
                 direction: ingress
@@ -174,6 +176,7 @@ resources:
               - port_range_min: 8080
                 port_range_max: 8080
                 protocol: tcp
+      condition: default
 
   port1:
       type: OS::Neutron::Port
@@ -184,7 +187,8 @@ resources:
           fixed_ips:
             - subnet_id: { get_param: subnet_name }
           security_groups:
-            - { get_resource: security_group }
+            - { if: ["custom", { get_param: securityGroup }, { get_resource: security_group } ] }
+            
   port2:
       type: OS::Neutron::Port
       depends_on: security_group
@@ -194,7 +198,7 @@ resources:
           fixed_ips:
             - subnet_id: { get_param: subnet_name }
           security_groups:
-            - { get_resource: security_group }
+            - { if: ["custom", { get_param: securityGroup }, { get_resource: security_group } ] }
   port3:
       type: OS::Neutron::Port
       depends_on: security_group
@@ -204,7 +208,7 @@ resources:
           fixed_ips:
             - subnet_id: { get_param: subnet_name }
           security_groups:
-            - { get_resource: security_group }
+            - { if: ["custom", { get_param: securityGroup }, { get_resource: security_group } ] }
 
   port4:
     type: OS::Neutron::Port
