--- a/cassandrav2.yaml
+++ b/cassandrav2.yaml
@@ -158,6 +158,9 @@ resources:
               - port_range_min: 7000
                 port_range_max: 7000
                 protocol: tcp
+              - port_range_min: 9042
+                port_range_max: 9042
+                protocol: tcp
       condition: default
       
   port1:
