added metadata: { db_instance: true }

--- a/mariadb.yaml
+++ b/mariadb.yaml
@@ -581,6 +581,7 @@ resources:
       networks:
         - port: { get_resource: port3 }
       user_data_format: RAW
+      metadata: { db_instance: true }
       user_data:
         str_replace:
           params:
@@ -718,6 +719,7 @@ resources:
       networks:
         - port: { get_resource: port4 }
       user_data_format: RAW
+      metadata: { db_instance: true }
       user_data:
         str_replace:
           params:
